TestSuite/PascalABCTests/errors/err0355_named_local_record.pas
type 
  A = class
    i: integer;
    procedure p;
    type b = record
      x := i;
    end;
    begin
    
    end;
  end;
  
begin
  
end.